; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_event.c_hci_get_auth_req.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_event.c_hci_get_auth_req.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_conn = type { i32, i32, i64, i64 }

@HCI_AT_NO_BONDING = common dso_local global i32 0, align 4
@HCI_AT_NO_BONDING_MITM = common dso_local global i32 0, align 4
@HCI_IO_NO_INPUT_OUTPUT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hci_conn*)* @hci_get_auth_req to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hci_get_auth_req(%struct.hci_conn* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.hci_conn*, align 8
  store %struct.hci_conn* %0, %struct.hci_conn** %3, align 8
  %4 = load %struct.hci_conn*, %struct.hci_conn** %3, align 8
  %5 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = load i32, i32* @HCI_AT_NO_BONDING, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %15, label %9

9:                                                ; preds = %1
  %10 = load %struct.hci_conn*, %struct.hci_conn** %3, align 8
  %11 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* @HCI_AT_NO_BONDING_MITM, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %24

15:                                               ; preds = %9, %1
  %16 = load %struct.hci_conn*, %struct.hci_conn** %3, align 8
  %17 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.hci_conn*, %struct.hci_conn** %3, align 8
  %20 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = and i32 %21, 1
  %23 = or i32 %18, %22
  store i32 %23, i32* %2, align 4
  br label %51

24:                                               ; preds = %9
  %25 = load %struct.hci_conn*, %struct.hci_conn** %3, align 8
  %26 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %25, i32 0, i32 2
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @HCI_IO_NO_INPUT_OUTPUT, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %41

30:                                               ; preds = %24
  %31 = load %struct.hci_conn*, %struct.hci_conn** %3, align 8
  %32 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %31, i32 0, i32 3
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @HCI_IO_NO_INPUT_OUTPUT, align 8
  %35 = icmp ne i64 %33, %34
  br i1 %35, label %36, label %41

36:                                               ; preds = %30
  %37 = load %struct.hci_conn*, %struct.hci_conn** %3, align 8
  %38 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = or i32 %39, 1
  store i32 %40, i32* %2, align 4
  br label %51

41:                                               ; preds = %30, %24
  %42 = load %struct.hci_conn*, %struct.hci_conn** %3, align 8
  %43 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = and i32 %44, -2
  %46 = load %struct.hci_conn*, %struct.hci_conn** %3, align 8
  %47 = getelementptr inbounds %struct.hci_conn, %struct.hci_conn* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = and i32 %48, 1
  %50 = or i32 %45, %49
  store i32 %50, i32* %2, align 4
  br label %51

51:                                               ; preds = %41, %36, %15
  %52 = load i32, i32* %2, align 4
  ret i32 %52
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
